# mcp-weather

./: .gitignore  client.py  main.py  pyproject.toml  server.py
