[project]
name = "mcp-weather"
version = "0.1.0"
description = "a simple MCP weather server which connects to a host, Claude for Desktop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv",
    "anthropic",
]

[tool.mcp]
runner = "uv run server.py"
